// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slot 插槽 当元素设置 slot 属性且值为空串时，移除 slot 属性 1`] = `<View><SlotComponent renderAfter={<Block><View>这里是插入到组件 slot name="after"中的内容</View></Block>}><View>这里是插入到组件 slot name="before"中的内容</View></SlotComponent></View>`;

exports[`style 属性的解析 style 属性值为变量 1`] = `<View style={value}></View>`;

exports[`style 属性的解析 判断是否为 style 属性 1`] = `
Map {
   => INFO [taroize] parseWXML - 入参 
dirPath: wxml_undefined 
parseImport: undefined 
INFO [taroize] parseWXML - 入参 
dirPath: wxml__ 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml__ 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View>Hello Word!</View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>Hello Word!</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: wxml_message 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml_message 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View>{data}</View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>{data}</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
data 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: wxml_component_properties_string 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"id","value":"item-view1"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml_component_properties_string 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View id="item-view1"></View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
id="item-view1" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
id 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View id="item-view1"></View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
id="item-view1" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
id 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
id="item-view1" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
id 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: wxml_component_properties_variable 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"id","value":"item-{{id}}"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml_component_properties_variable 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View id={"item-" + id}></View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
id={"item-" + id} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
id 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View id={"item-" + id}></View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
id={"item-" + id} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
id 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
id={"item-" + id} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
id 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
id 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: wxml_keywords 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"checked","value":"{{false}}"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml_keywords 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><Checkbox checked={false}></Checkbox></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Checkbox 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
checked={false} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
checked 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Checkbox 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Checkbox checked={false}></Checkbox> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Checkbox 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
checked={false} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
checked 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Checkbox 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Checkbox 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
checked={false} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
checked 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Checkbox 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: wxml_ternary_operations 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"hidden","value":"{{flag ? true : false}}"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml_ternary_operations 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View hidden={flag ? true : false}>Hidden</View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
hidden={flag ? true : false} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
wx:if 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View wx:if={!(flag ? true : false)}>Hidden</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
wx:if={!(flag ? true : false)} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
flag 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>Hidden</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: wxml_string_operations 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml_string_operations 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View>{"hello" + name}</View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>{"hello" + name}</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: wxml_wx_for 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"wx:for","value":"{{array}}"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml_wx_for 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View wx:for={array}>{index + ": " + item.message}</View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
wx:for={array} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block>{array.map((item, index) => {
    return <View>{index + ": " + item.message}</View>;
  })}</Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
array 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
map 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
item 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
index 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>{index + ": " + item.message}</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
index 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
item 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
message 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
array 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
map 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
item 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
index 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>{index + ": " + item.message}</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
index 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
item 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
message 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: wxml_key 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"wx:key","value":"index"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"wx:for","value":"{{data}}"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: text 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml_key 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View wx:key="index" wx:for={data}><Text>{item.name}</Text></View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
wx:key="index" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
wx:key 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
wx:for={data} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
key={index} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
key 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block>{data.map((item, index) => {
    return <View key={index}><Text>{item.name}</Text></View>;
  })}</Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
key={index} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
key 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
data 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
map 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
item 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
index 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View key={index}><Text>{item.name}</Text></View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
key={index} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
key 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
key={index} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
key 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
index 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Text>{item.name}</Text> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
item 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
data 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
map 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
item 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
index 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View key={index}><Text>{item.name}</Text></View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
key={index} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
key 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
key={index} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
key 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
index 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Text>{item.name}</Text> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
item 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Text 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: wxml_if 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"wx:if","value":"{{length > 5}}"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"wx:elif","value":"{{length > 2}}"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"wx:else","value":null} 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml_if 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View wx:if={length > 5}>1</View><View wx:elif={length > 2}>2</View><View wx:else>3</View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
wx:if={length > 5} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
length 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>1</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
length 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>2</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>3</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: wxml_show 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"wx:show","value":"{{isShow}}"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml_show 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View wx:show={isShow}>测试使用 wx:if 替换 wx:show 属性</View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
wx:show={isShow} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
wx:show 
WARN [taroize] createWxmlVisitor - wx:show 属性不能编译，会被替换为 wx:if 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
wx:if 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View wx:if={isShow}>测试使用 wx:if 替换 wx:show 属性</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
wx:if={isShow} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
isShow 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>测试使用 wx:if 替换 wx:show 属性</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: wxml_unsupported_classArray 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"class","value":"[1,2,3]"} 
WARN [taroize] parseAttribute - Taro/React 不支持 class 传入数组，此写法可能无法得到正确的 class 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxml_unsupported_classArray 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View className="12,3"></View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="12,3" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View className="12,3"></View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="12,3" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="12,3" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: anonymity_slot 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"class","value":"wrapper"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: anonymity_slot 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View className="wrapper"><View>这里是组件的内部节点</View><Slot></Slot></View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="wrapper" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View className="wrapper"><View>这里是组件的内部节点</View><Slot></Slot></View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="wrapper" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="wrapper" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>这里是组件的内部节点</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Slot></Slot> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - tagName: Slot 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
props 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
children 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: anonymity_wxml_slot 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: slot-component 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: anonymity_wxml_slot 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View><SlotComponent><View>插入 slot 的内容</View></SlotComponent></View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View><SlotComponent><View>插入 slot 的内容</View></SlotComponent></View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<SlotComponent><View>插入 slot 的内容</View></SlotComponent> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>插入 slot 的内容</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: named_slot 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"class","value":"wrapper"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"name","value":"before"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"name","value":"after"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: named_slot 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View className="wrapper"><Slot name="before"></Slot><View>这里是组件的内部细节</View><Slot name="after"></Slot></View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="wrapper" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
name="before" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
name="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View className="wrapper"><Slot name="before"></Slot><View>这里是组件的内部细节</View><Slot name="after"></Slot></View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="wrapper" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
name="before" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
name="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="wrapper" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Slot name="before"></Slot> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
name="before" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - tagName: Slot 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
props 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
renderBefore 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>这里是组件的内部细节</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Slot name="after"></Slot> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
name="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - tagName: Slot 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
props 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
renderAfter 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: named_wxml_slot 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: slot-component 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"slot","value":"before"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: slot-component 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"slot","value":"after"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: named_wxml_slot 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View><SlotComponent><View slot="before">这里是插入到组件 slot name="before"中的内容</View><View slot="after">这里是插入到组件 slot name="after"中的内容</View></SlotComponent></View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="before" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View><SlotComponent><View slot="before">这里是插入到组件 slot name="before"中的内容</View><View slot="after">这里是插入到组件 slot name="after"中的内容</View></SlotComponent></View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="before" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<SlotComponent><View slot="before">这里是插入到组件 slot name="before"中的内容</View><View slot="after">这里是插入到组件 slot name="after"中的内容</View></SlotComponent> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="before" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View slot="before">这里是插入到组件 slot name="before"中的内容</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="before" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View slot="after">这里是插入到组件 slot name="after"中的内容</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: component_slot_empty 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: slot-component 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"slot","value":""} 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: slot-component 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"slot","value":"after"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: component_slot_empty 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View><SlotComponent><View slot>这里是插入到组件 slot name="before"中的内容</View><View slot="after">这里是插入到组件 slot name="after"中的内容</View></SlotComponent></View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View><SlotComponent><View slot>这里是插入到组件 slot name="before"中的内容</View><View slot="after">这里是插入到组件 slot name="after"中的内容</View></SlotComponent></View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<SlotComponent><View slot>这里是插入到组件 slot name="before"中的内容</View><View slot="after">这里是插入到组件 slot name="after"中的内容</View></SlotComponent> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View slot>这里是插入到组件 slot name="before"中的内容</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View slot="after">这里是插入到组件 slot name="after"中的内容</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
slot="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
SlotComponent 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseWXML - 入参 
dirPath: slot_name_no_string 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"class","value":"wrapper"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"name","value":"{{123}}"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"name","value":"after"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: slot_name_no_string 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><View className="wrapper"><Slot name={123}></Slot><View>这里是组件的内部细节</View><Slot name="after"></Slot></View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="wrapper" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
name={123} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
name="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View className="wrapper"><Slot name={123}></Slot><View>这里是组件的内部细节</View><Slot name="after"></Slot></View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="wrapper" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
name={123} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
name="after" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
className="wrapper" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
className 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Slot name={123}></Slot> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
name={123} 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
name 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Slot 
INFO [taroize] createWxmlVisitor - tagName: Slot 
ERROR [taroize] createWxmlVisitor - slot 的值不是一个字符串 
INFO [taroize] parse - 入参 
option: {"framework":"react","json":"{}","logFilePath":"","path":"wxs_src","rootPath":"","script":"Page({})","scriptPath":"","wxml":"n      <wxs src=".././../utils/test.wxs" module="wxs_test"/>n      <view>{{wxs_test.foo}}</view>n      <view>{{wxs_test.bar('nihao')}}</view>n    ","isApp":false} 
INFO [taroize] parseWXML - 入参 
dirPath: wxs_src 
parseImport: undefined 
INFO [taroize] parseNode - 入参 
tagName: undefined 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"src","value":".././../utils/test.wxs"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseAttribute - 入参 
attr: {"key":"module","value":"wxs_test"} 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: block 
INFO [taroize] parseElement - 进入函数 
INFO [taroize] parseNode - 入参 
tagName: view 
INFO [taroize] parseText - 进入函数 
INFO [taroize] parseContent - 进入函数 
INFO [taroize] createPreWxmlVisitor - 入参 
templates: [object Map] 
INFO [taroize] templateBfs - 进入函数 
INFO [taroize] createWxmlVisitor - 入参 
dirPath: wxs_src 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Block><Wxs src=".././../utils/test.wxs" module="wxs_test"></Wxs><View>{wxs_test.foo}</View><View>{wxs_test.bar('nihao')}</View></Block> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Wxs 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
src=".././../utils/test.wxs" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
src 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
module="wxs_test" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
module 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Wxs 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<Wxs src=".././../utils/test.wxs" module="wxs_test"></Wxs> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Wxs 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
src=".././../utils/test.wxs" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
src 
INFO [taroize] createWxmlVisitor - 解析 JSXAttribute 
module="wxs_test" 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
module 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Wxs 
INFO [taroize] createWxmlVisitor - tagName: Wxs 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>{wxs_test.foo}</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
wxs_test 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
foo 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXElement 
<View>{wxs_test.bar('nihao')}</View> 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
wxs_test 
INFO [taroize] createWxmlVisitor - 解析 Identifier 
bar 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
View 
INFO [taroize] createWxmlVisitor - 解析 JSXIdentifier 
Block 
INFO [taroize] parseScript - 入参 
scriptPath:  
INFO [taroize] parseCode - 入参
scriptPath:  
INFO [taroize] parseScript - 解析 CallExpression 
Page({}) 
INFO [taroize] parsePage - 入参 
pagePath: Page({}) 
INFO [taroize] parseScript - 解析 Identifier 
Page 
,
}
`;

exports[`wx 作用域属性解析 wx:for & wx:for-xxx 1`] = `
array.map((itemName, idx) => {
  return <View>{idx + ": " + itemName.message}</View>;
})
`;

exports[`wx 作用域属性解析 wx:for & wx:if 1`] = `
modalKey.map((item, index) => {
  return <Block>{item.key && <View>{"the value is : " + item.value}</View>}</Block>;
})
`;

exports[`wx 作用域属性解析 wx:if & wx:for 1`] = `
modalKey.map((item, index) => {
  return <Block>{item.key && <View>{"the value is : " + item.value}</View>}</Block>;
})
`;

exports[`wxml 语法 wx:key="index"会转换成 key="index" 1`] = `
data.map((item, index) => {
  return <View key={index}><Text>{item.name}</Text></View>;
})
`;

exports[`wxml 语法 wxml 中 class 不支持数组写法 1`] = `<View className="12,3"></View>`;

exports[`wxml 语法 使用 wx:if 替换 wx:show 属性 1`] = `isShow && <View>测试使用 wx:if 替换 wx:show 属性</View>`;

exports[`wxml 语法 列表渲染 1`] = `
array.map((item, index) => {
  return <View>{index + ": " + item.message}</View>;
})
`;

exports[`wxs wxs 中 单行注释 1`] = `
module.exports = {
  foo: "'hello world' from tools.wxs"
  // msg:'123'
};
`;

exports[`wxs wxs 多行注释 1`] = `
module.exports = {
  foo: "'hello world' from tools.wxs"
  /*
   * msg:'123',
   * name:'xixi'
   **/
};
`;

exports[`wxs wxs 标签中的 getDate() 转换为 new Date() 1`] = `
module.exports = {
  date1: new Date(),
  //参数为数字
  date2: new Date(1500000000000),
  //参数为字符串
  date3: new Date("2017-7-14")
};
`;

exports[`wxs 在页面中引入外部 wxs，转换情况 1`] = `
import { Block, View } from "@tarojs/components";
import React from "react";
import Taro from "@tarojs/taro";
const {
  default: withWeapp
} = require("@tarojs/with-weapp");
import wxs_test from ".././../utils/test.wxs";
Page({});
@withWeapp(cacheOptions.getOptionsFromCache())
class _C extends React.Component {
  render() {
    return <Block><View>{wxs_test.foo}</View><View>{wxs_test.bar('nihao')}</View></Block>;
  }
}
export default _C;
`;

exports[`wxs 页面中使用 wxs 1`] = `
module.exports = {
  data: "wxs demo"
};
`;

exports[`解析 wxs 中创建正则表达式方法的转换 定义了正则表达式的修饰符，则使用自定义修饰符 1`] = `
var a = new RegExp("jzy123", "img");
module.exports = {
  reg: a
};
`;

exports[`解析 wxs 中创建正则表达式方法的转换 没有定义了正则表达式的修饰符，就不添加修饰符使用默认 1`] = `
var a = new RegExp("jzy123");
module.exports = {
  reg: a
};
`;
